--- a/modulo1/index.html
+++ b/modulo1/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="description" content="primera vez en html">
-    <meta name="keywords" content="CSS, HTML, WEB">
-    <meta name="author" content="Edisson">
+  <head>
+    <meta name="description" content="primera vez en html" />
+    <meta name="keywords" content="CSS, HTML, WEB" />
+    <meta name="author" content="Edisson" />
     <title>html</title>
-</head>
-<body>
-!hola mundo¡    
-</body>
+  </head>
+  <body>
+    !hola mundo¡
+
+    <button src="../index.html">ir</button>
+  </body>
 </html>
